fix: Reduce size of the menu bar when collapsed

--- a/src/ui/scss/menu.scss
+++ b/src/ui/scss/menu.scss
@@ -71,7 +71,8 @@
 
 .collapsed {
     #menu-bar {
-        width: 90px;
+        width: auto;
+        height: auto;
     }
 
     #menu-collapse {
@@ -80,6 +81,7 @@
 
     #menu-arrow {
         display: block;
+        padding: 10px;
     }
 
     .menu-option {
